' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.

' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Prbleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "Fussballer" {
  * id: integer <<generated>>
  --
  * version: integer
  * nachname: text
  * nationalitaet: text
  * position: text
  * geburtsdatum: date
  * username: text
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

entity "Adresse" {
  * id: integer <<generated>>
  --
    plz: text
    ort: text
    bundesland: text
  * **fussballer_id**: integer <<FK>>
}

entity "Auszeichnung" {
  * id: integer <<generated>>
  --
  * bezeichnung: text
  * saison: text
  * **fussballer_id**: integer <<FK>>
}

Fussballer ||..|| Adresse
Fussballer ||..o{ Auszeichnung

footer (c) Jürgen Zimmermann

@enduml
